077: Updated Docs for USs 30-33